# hermes

./: .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: auth.py  config.py  core_json_schema.py  main.py  schemas.py
app/api/: routes.py
app/providers/: base.py  codex_cli.py  openai_compatible.py
app/services/: gateway.py
ops/systemd/: hermes-deploy.service  hermes-deploy.timer  hermes.service
tests/: test_api.py  test_gateway.py
