[project]
name = "hermes-ai-gateway"
version = "0.1.0"
description = "Thin multi-app AI provider gateway with OpenAI-compatible and Codex adapters"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.9.0",
  "openai>=1.50.0",
  "jsonschema>=4.23.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "httpx>=0.27.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]

